[package]
name = "smbclient-sys"
version = "0.1.0"
authors = ["Michelle Zhong <mzhong215@cable.comcast.com>"]
description = "FFI bindings to libsmbclient"
license = "MIT"
readme = "README.md"
keywords = ["samba", "smb", "cifs", "smbclient", "netbios"]
edition = "2018"
build = "build.rs"
links = "smbclient"

[build-dependencies]
bindgen = "^0.47.1"

[lib]
name = "smbclient_sys"
path = "src/lib.rs"


[dependencies]
libc = "0.2.43"
nix = "0.11"
