[package]
name = "rust-smbclient-sys"
version = "1.0.0"
authors = ["Michelle Zhong <mzhong215@cable.comcast.com>"]
description = "FFI bindings to libsmbclient"
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"
links = "smbclient"

[build-dependencies]
bindgen = "0.68.1"

[lib]
name = "rust_smbclient_sys"
doctest = false

[dependencies]
libc = "0.2.149"
nix = "0.27.1"
